--- a/generar multas.html
+++ b/generar multas.html
@@ -9,10 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Sanciones</title>
 <style>
-    body{
+  *{
         padding: 0;
         margin: 0;
         font-family: Arial, Helvetica, sans-serif;
+    }
+    body{
+       
         background-color: rgba(179, 179, 179, 0.2);
     }
    
@@ -32,8 +35,11 @@
     text-align: center;
     font-weight: bold;
   }
-  i{
+  .iconos-header{
     color: aliceblue;
+  }
+  i{
+  
     padding: 5px;
   }
   .container-botones{
@@ -56,13 +62,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"> <i class="bi bi-person-circle user"></i>  Usuario</a> 
+                <a class="nav-link active" aria-current="page" href="login.html"> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#"> <i class="bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link active" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#"> <i class="bi bi-question-circle"></i> Ayuda</a>
+                <a class="nav-link active" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
               </li>
             </ul>
           </div>
@@ -161,6 +167,8 @@
                   <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="subir documentacion.html">Ingresar documentación</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="historial de pagos.html">Historial de pagos</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
