--- a/historial de pagos.html
+++ b/historial de pagos.html
@@ -59,7 +59,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="login.html"> <i class="bi bi-person-circle user"></i>  Usuario</a> 
+                <a class="nav-link active" aria-current="page" href="index.html"> <i class="bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#"> <i class="bi bi-bell"></i>  Notificación</a>
@@ -96,21 +96,21 @@
           </div>
     
           <div class="col-md-6">
-            <label for="validationDefault06" class="form-label">Fecha de pago</label>
-            <input type="date" class="form-control" id="validationDefault06" required>
+            <label for="validationDefault05" class="form-label">Fecha de pago</label>
+            <input type="date" class="form-control" id="validationDefault05" required>
           </div>
         
           <div class="col-md-6">
-            <label for="validationDefault09" class="form-label">Referente de pago</label>
-            <input type="number" class="form-control" id="validationDefault09" required>
+            <label for="validationDefault06" class="form-label">Referente de pago</label>
+            <input type="number" class="form-control" id="validationDefault06" required>
           </div>
           <div class="col-md-12">
-            <label for="validationDefault09" class="form-label">Evidencia</label>
-            <input type="file" class="form-control" id="validationDefault09" required>
+            <label for="validationDefault07" class="form-label">Evidencia</label>
+            <input type="file" class="form-control" id="validationDefault07" required>
           </div>
           <div class="col-md-6">
-            <label for="validationDefault10" class="form-label">ESTADO</label>
-            <select class="form-select" id="validationDefault010" required>
+            <label for="validationDefault07" class="form-label">ESTADO</label>
+            <select class="form-select" id="validationDefault07" required>
               <option>---Seleccionar---</option>
               <option>MOROSO</option>
               <option>AL DÍA</option>
@@ -178,7 +178,7 @@
                   ADMINISTRACIÓN
                 </a>
                 <ul class="dropdown-menu text-center">
-                  <li><a class="dropdown-item" href="index.html">Ingresar INF. del apartamento</a></li>
+                  <li><a class="dropdown-item" href="ingresar apartamento.html">Ingresar INF. del apartamento</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="Buscar apartamento.html">INF. del apartamento</a></li>
                   <li><hr class="dropdown-divider"></li>
