--- a/reservacion zonas.html
+++ b/reservacion zonas.html
@@ -63,7 +63,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="login.html"> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
+                <a class="nav-link active" aria-current="page" href="index.html"> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
@@ -182,7 +182,7 @@
                   ADMINISTRACIÓN
                 </a>
                 <ul class="dropdown-menu text-center">
-                    <li><a class="dropdown-item" href="index.html">Ingresar INF. del apartamento</a></li>
+                    <li><a class="dropdown-item" href="ingresar apartamento.html">Ingresar INF. del apartamento</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="Buscar apartamento.html">INF. del apartamento</a></li>
                     <li><hr class="dropdown-divider"></li>
