--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <i class="bi bi-person-fill"></i>
         </div>
         <div class="input-box">
-            <input type="password" placeholder="password" required>
+            <input type="password" placeholder="Password" required>
             <i class="bi bi-lock-fill"></i>
         </div>
         <div class="remember-forgot">
