--- a/inquilinos.html
+++ b/inquilinos.html
@@ -150,6 +150,7 @@
                 <th scope="col">CEDULA</th>
                 <th scope="col">SEXO</th>
                 <th scope="col">CELULAR</th>
+                <th scope="col">PROPIETARIO</th>
               </tr>
             </thead>
             <tbody>
@@ -163,6 +164,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td scope="col"><button class="btn btn-outline-primary" type="submit"> <a class="dropdown-item" href="ingresar apartamento.html"> <i class="bi bi-eye"></i>Ver</a> </button></td>
                 <td scope="col"><button class="btn btn-outline-success" type="submit"> <a class="dropdown-item" href=""> <i class="bi bi-person-gear"></i>Modificar</a></button></td>
               <td scope="col"> <button class="btn btn-outline-danger" type="reset"> <a class="dropdown-item" href=""> <i class="bi bi-person-x"></i>Eliminar</a></button></td>
               </tr>
