modificacion ingresar propietario

--- a/generar multas.html
+++ b/generar multas.html
@@ -125,7 +125,7 @@
             <input type="file" class="form-control" id="validationDefault08" required>
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Descripcioón</label>
+            <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           <div class="col-md-6">
