--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
     .remember-forgot label input{
         accent-color: #fff;
         margin-right: 3px;
+        
     }
     .remember-forgot a {
         color: #fff;
         text-decoration: none;
+        font-weight: 600;
     }
     .remember-forgot a:hover{
         text-decoration: underline;
@@ -135,7 +137,7 @@
 </head>
 <body>
 
-    <!– barra de navegacion del header –>
+    <!- barra de navegacion del header ->
 
 <header class="header   ">
     <nav class="navbar fixed-top bg-primary navbar-expand-md ">
@@ -161,7 +163,7 @@
       </nav>
 </header>
 
-<! Formulario del propietario –>
+<! Formulario del propietario ->
 
 <main class="main">
   <div class="wrapper">
@@ -190,7 +192,7 @@
 
 </main>
 
-<!– Barra de navegación del footer –>
+<!- Barra de navegación del footer ->
 
 <footer class="footer">
     <nav class="navbar navbar-expand-md fixed-bottom bg-primary dropup">
