se modifica el index

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <main>
  
   <div class="row g-3 wrapper div-form col-md-6 formulario  ">
-    <p class="titulo col-md-6"> Bienvenidos al sitema de gestion PropHoriz </p>
+    <p class="titulo col-md-6"> Bienvenidos al sistema de gestion PropHoriz </p>
     <div>
       <a  href="ingresar apartamento.html" class="d-grid col-md-5  mx-auto nav-link " > <button class="btn boton1 boton uno" type="button"> Ingresar propietario <i class="bi bi-person-plus iconos"></i></button> </a>
       
