se modifican archivos

--- a/Modulo administracion/modulo administracion.html
+++ b/Modulo administracion/modulo administracion.html
@@ -64,7 +64,7 @@
     
     </form>
     <!- cuando sea funcional poner esta aparte dentro del formulario ->
-    <a href="/Modulo administracion/menu admistracion/menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
+    <a href="menu admistracion/menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
     <div class="register-link">
       <p>No tienes una cuenta?
       <a href="">Registrarse</a></p>
