--- a/Modulo administracion/menu admistracion/formulario/ingresar apartamento.html
+++ b/Modulo administracion/menu admistracion/formulario/ingresar apartamento.html
@@ -30,7 +30,7 @@
                 <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="../anuncios.html"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
@@ -113,7 +113,7 @@
         <div class="table-responsive">
             <p>PROPIETARIO</p>
         <table class="table text-center table-hover ">
-          <thead class="table-primary">
+          <thead class="table-secondary">
             <tr>
               <th scope="col">ID</th>
               <th scope="col">APARTAMENTO</th>
@@ -142,7 +142,7 @@
               <td></td>
               <td></td>
               <td></td>
-              <td scope="col"><button class="btn btn-outline-dark" type="submit"> <a class="dropdown-item" href="inquilinos.html"> <i class="bi bi-eye-fill"></i>Ingresar</a> </button></td>
+              <td scope="col"><button class="btn btn-outline-dark" type="submit"> <a class="dropdown-item" href="inquilinos/inquilinos.html"> <i class="bi bi-eye-fill"></i>Ingresar</a> </button></td>
               <td scope="col"><button class="btn btn-outline-success" type="submit"> <a class="dropdown-item" href=""> <i class="bi bi-person-gear"></i>Modificar</a></button></td>
               <td scope="col"> <button class="btn btn-outline-danger" type="reset"> <a class="dropdown-item" href=""> <i class="bi bi-person-x"></i>Eliminar</a></button></td>
             </tr>
@@ -197,25 +197,15 @@
               <li><a class="dropdown-item" href="#">Listado general</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              VIGILANCIA
-            </a>
-            <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingreso de visitantes.html">Ingresos</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
-              <li><hr class="dropdown-divider"></li>
-            </ul>
-          </li>
+         
           <li class="nav-item dropdown">
             <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               CONSERJE
             </a>
             <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingreso de visitantes.html">Ingresos</a></li>
+              <li><a class="dropdown-item" href="">Ingresos</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
+              <li><a class="dropdown-item" href="">Reservar zona social</a></li>
               <li><hr class="dropdown-divider"></li>
             </ul>
           </li>
