--- a/Modulo administracion/menu admistracion/formulario/inquilinos/inquilinos.html
+++ b/Modulo administracion/menu admistracion/formulario/inquilinos/inquilinos.html
@@ -21,7 +21,7 @@
 <header class="header   ">
     <nav class="navbar fixed-top barra navbar-expand-md ">
         <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz " href="menu administracion.html">PropHoriz</a>
+          <a class="navbar-brand titulo-prophoriz " href="">PropHoriz</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,7 +31,7 @@
                 <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
@@ -106,7 +106,7 @@
     <div class="table-responsive">
         <p>INQUILINOS</p>
         <table class="table text-center table-hover table-borderless ">
-            <thead class="table-primary">
+            <thead class="table-secondary">
               <tr>
                 <th scope="col">ID</th>
                 <th scope="col">N° DE APARTAMENTO</th>
@@ -157,24 +157,24 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link menu-color-letra" aria-current="page" href="menu administracion.html">INICIO</a>
+            <a class="nav-link menu-color-letra" aria-current="page" href="">INICIO</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
               ADMINISTRACIÓN
             </a>
             <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingresar apartamento.html">Ingresar INF. del apartamento</a></li>
+              <li><a class="dropdown-item" href="../ingresar apartamento.html">Ingresar INF. del apartamento</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="Buscar apartamento.html">INF. del apartamento</a></li>
+              <li><a class="dropdown-item" href="../Buscar apartamento.html">INF. del apartamento</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="generar multas.html">Generar multa</a></li>
+              <li><a class="dropdown-item" href="../generar multas.html">Generar multa</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
+              <li><a class="dropdown-item" href="../reservacion zonas.html">Reservar zona social</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="subir documentacion.html">Ingresar documentación</a></li>
+              <li><a class="dropdown-item" href="../subir documentacion.html">Ingresar documentación</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="historial de pagos.html">Historial de pagos</a></li>
+              <li><a class="dropdown-item" href="../historial de pagos.html">Historial de pagos</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -191,25 +191,15 @@
               <li><a class="dropdown-item" href="#">Listado general</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              VIGILANCIA
-            </a>
-            <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingreso de visitantes.html">Ingresos</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
-              <li><hr class="dropdown-divider"></li>
-            </ul>
-          </li>
+      
           <li class="nav-item dropdown">
             <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               CONSERJE
             </a>
             <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingreso de visitantes.html">Ingresos</a></li>
+              <li><a class="dropdown-item" href="">Ingresos</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
+              <li><a class="dropdown-item" href="">Reservar zona social</a></li>
               <li><hr class="dropdown-divider"></li>
             </ul>
           </li>
