--- a/Modulo administracion/menu admistracion/formulario/subir documentacion.html
+++ b/Modulo administracion/menu admistracion/formulario/subir documentacion.html
@@ -31,7 +31,7 @@
                 <a class="nav-link iconos-header-letra" aria-current="page" href="../menu administracion.html../"> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="../anuncios.html"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
@@ -84,7 +84,7 @@
         <div class="table-responsive">
             <p>DOCUMENTOS</p>
         <table class="table text-center table-hover table-borderless">
-          <thead class="table-primary">
+          <thead class="table-secondary">
             <tr>
               <th scope="col">ID</th>
               <th scope="col">NOMBRE</th>
@@ -158,17 +158,7 @@
               <li><a class="dropdown-item" href="#">Listado general</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              VIGILANCIA
-            </a>
-            <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingreso de visitantes.html">Ingresos</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
-              <li><hr class="dropdown-divider"></li>
-            </ul>
-          </li>
+         
           <li class="nav-item dropdown">
             <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               CONSERJE
