--- a/Modulo administracion/menu admistracion/menu administracion.html
+++ b/Modulo administracion/menu admistracion/menu administracion.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="IMG/ICONO CASA.ico">
+    <link rel="icon" href="../menu admistracion/IMG/ICONO CASA.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Inicio</title>
+    <title>Menu administración</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
@@ -27,10 +27,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" aria-current="page" href="login.html"> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
+                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="anuncios.html"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
@@ -96,17 +96,17 @@
               ADMINISTRACIÓN
             </a>
             <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingresar apartamento.html">Ingresar INF. del apartamento</a></li>
+              <li><a class="dropdown-item" href="../menu admistracion/formulario/ingresar apartamento.html">Ingresar INF. del apartamento</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="Buscar apartamento.html">INF. del apartamento</a></li>
+              <li><a class="dropdown-item" href="../menu admistracion/formulario/Buscar apartamento.html">INF. del apartamento</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="generar multas.html">Generar multa</a></li>
+              <li><a class="dropdown-item" href="../menu admistracion/formulario/generar multas.html">Generar multa</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
+              <li><a class="dropdown-item" href="../menu admistracion/formulario/reservacion zonas.html">Reservar zona social</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="subir documentacion.html">Ingresar documentación</a></li>
+              <li><a class="dropdown-item" href="../menu admistracion/formulario/subir documentacion.html">Ingresar documentación</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="historial de pagos.html">Historial de pagos</a></li>
+              <li><a class="dropdown-item" href="../menu admistracion/formulario/historial de pagos.html">Historial de pagos</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -118,22 +118,12 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Listado de propietarios en mora</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Listado de propietarios al dia</a></li>
+              <li><a class="dropdown-item" href="#">Listado de propietarios al día</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Listado general</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              VIGILANCIA
-            </a>
-            <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="ingreso de visitantes.html">Ingresos</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="reservacion zonas.html">Reservar zona social</a></li>
-              <li><hr class="dropdown-divider"></li>
-            </ul>
-          </li>
+        
           <li class="nav-item dropdown">
             <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               CONSERJE
