--- a/Modulo administracion/modulo administracion.html
+++ b/Modulo administracion/modulo administracion.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="IMG/ICONO CASA.ico">
+    <link rel="icon" href="../IMG/ICONO CASA.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>PropHoriz</title>
+    <title>Login administración</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
@@ -28,10 +28,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra " aria-current="page" href="../index.html"> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
+                <a class="nav-link iconos-header-letra " aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra " href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra " href="menu admistracion/anuncios.html"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra " href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
@@ -47,7 +47,7 @@
 <main class="main">
   <div class="wrapper">
     <form action="">
-        <h1>ADMINISTRACIÓN</h1>
+        <P class="titulo">ADMINISTRACIÓN </P>
         <div class="input-box">
             <input type="text" placeholder="Usuario" required>
             <i class="bi bi-person-fill"></i>
@@ -64,6 +64,7 @@
     
     </form>
     <!- cuando sea funcional poner esta aparte dentro del formulario ->
+  
     <a href="menu admistracion/menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
     <div class="register-link">
       <p>No tienes una cuenta?
@@ -78,7 +79,7 @@
 <footer class="footer">
   <nav class="navbar navbar-expand-md fixed-bottom barra dropup"  >
     <div class="container-fluid mx-5 ">
-     <p>Todos los derechos reservados 2023 D.C</p>
+     <p> <b>COPYRIGHT <i class="bi bi-c-circle"></i></b>Todos los derechos reservados</p>
     </div>
   </nav>
 </footer>
