--- a/Modulo propietario/modulo propietarios.html
+++ b/Modulo propietario/modulo propietarios.html
@@ -22,7 +22,7 @@
 <header class="header   ">
     <nav class="navbar fixed-top barra navbar-expand-md ">
         <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz" href="">PropHoriz</a>
+          <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -57,17 +57,12 @@
             <input type="password" placeholder="N° de apartamento" required>
             <i class="bi bi-lock-fill"></i>
         </div>
-        <div class="remember-forgot">
-            <label for=""> <input type="checkbox"> Recordar datos</label>
-            <a href="">Olvidaste tu conrtraseña</a>
-        </div>
-        <button type="submit" class="btn">Ingresar</button>
-        <div class="register-link">
-            <p>No tienes una cuenta?
-            <a href="">Registrarse</a></p>
-        </div>
+       
     </form>
-
+    <!- cuando sea funcional poner esta aparte dentro del formulario ->
+    
+    <a href="Menu propietario/Menu propietario.html"> <button type="submit" class="btn">Ingresar</button> </a>
+  
   </div>
 
 </main>
@@ -77,7 +72,7 @@
 <footer class="footer">
   <nav class="navbar navbar-expand-md fixed-bottom barra dropup"  >
     <div class="container-fluid mx-5 ">
-      <p>Todos los derechos reservados 2023 D.C</p>
+      <p> <b>COPYRIGHT <i class="bi bi-c-circle"></i></b>Todos los derechos reservados</p>
       </div>
   </nav>
 </footer>
