se modifican formularios

--- a/Modulo administracion/menu admistracion/menu administracion.html
+++ b/Modulo administracion/menu admistracion/menu administracion.html
@@ -27,13 +27,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
+                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-lines-fill"></i>Administración</a> 
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="anuncios.html"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link iconos-header-letra" href="/Modulo administracion/modulo administracion.html"> <i class="iconos-header bi bi-door-open-fill"></i> Cerrar sesión</a>
               </li>
             </ul>
           </div>
