--- a/Modulo propietario/Menu propietario/Menu propietario.html
+++ b/Modulo propietario/Menu propietario/Menu propietario.html
@@ -27,13 +27,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
+                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-lines-fill user"></i>1000234567</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="ver anuncios.html"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="ver anuncios.html"> <i class="iconos-header bi bi-megaphone"></i>Anuncios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link iconos-header-letra" href="/Modulo propietario/modulo propietarios.html"> <i class="iconos-header bi bi-door-open-fill"></i>Cerrar sesión</a>
               </li>
             </ul>
           </div>
