--- a/Modulo propietario/Menu propietario/ver anuncios.html
+++ b/Modulo propietario/Menu propietario/ver anuncios.html
@@ -44,30 +44,30 @@
       </nav>
 </header>
     <main>
-        <p class="titulo-anuncios">Anuncios</p>
-       <div class="container">
-       
-            <div class="card">
+      <p>Anuncio</p>
+       <div class="container  div-form rounded">
+        
+             <div class="card">
                  <figure>
-                 <img src="https://static.vecteezy.com/system/resources/previews/013/612/659/non_2x/lighting-and-electricity-energy-maintenance-service-panel-cabinet-of-technician-electrical-work-on-flat-cartoon-hand-drawn-templates-illustration-vector.jpg" >
+                    <img src="https://static.vecteezy.com/system/resources/previews/013/612/659/non_2x/lighting-and-electricity-energy-maintenance-service-panel-cabinet-of-technician-electrical-work-on-flat-cartoon-hand-drawn-templates-illustration-vector.jpg" >
                 </figure>
-                <div class="contenido">
-                    <h3>Corte de luz</h3>
-                    <p> <b>¡Atención a todos los vecinos!</b> 
-                    <br>
-                    Les informamos que, debido a trabajos de mantenimiento, habrá un corte programado de luz en el cojunto el próximo 12 de octubre.</p>
-                    <a href="">Leer más</a>
-            </div>
-            </div>
+                    <div class="contenido">
+                      <h3>Corte de luz</h3>
+                      <p> <b>¡Atención Propietarios!</b> 
+                      <br>
+                      Les informamos que, debido a trabajos de mantenimiento, habrá un corte programado de luz en el cojunto el próximo 19 de octubre.</p>
+                      <a href="">Leer más</a>
+                    </div>
+              </div>
             <div class="card">
                 <figure>
                 <img src="https://pbs.twimg.com/media/EW7-Ty2XQAAgSd0.jpg" >
                 </figure>
                 <div class="contenido">
                 <h3>Corte de agua</h3>
-                <p><b>¡Atención a todos los vecinos!</b> 
+                <p><b>¡Atención Propietarios!</b> 
                     <br>
-                    Les informamos que, debido a trabajos de mantenimiento, habrá un corte programado de luz en el cojunto el próximo 12 de octubre.</p>
+                    Les informamos que, debido a trabajos de mantenimiento, habrá un corte programado de luz en el cojunto el próximo 19 de octubre.</p>
                 <a href="">Leer más</a>
                 </div>
             </div>
@@ -77,13 +77,13 @@
                 </figure>
                 <div class="contenido">
                 <h3>Evento de halloween</h3>
-                <p> El evento de Halloween se llevará a cabo a partir de las 6:00 PM. Únanse a nosotros para una noche llena de sustos, sorpresas y diversión terrorífica. Traigan sus disfraces más escalofriantes y prepárense para una experiencia inolvidable.</p>
+                <p> <b>¡Atención Propietarios!</b> <br> El evento de Halloween se llevará a cabo el día 31 de octubre a partir de las 6:00 PM. Únanse a nosotros para una noche llena de sustos, sorpresas y diversión terrorífica. Traigan sus disfraces más escalofriantes y prepárense para una experiencia inolvidable.</p>
                 <a href="">Leer más</a>
             </div>
             </div>
       </div>
   
-</main>
+    </main>
 <!- Barra de navegación del footer ->
 
 <footer>
