--- a/Modulo administracion/modulo administracion/modulo administracion.html
+++ b/Modulo administracion/modulo administracion/modulo administracion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../IMG/ICONO CASA.ico">
+    <link rel="icon" href="/IMG/ICONO CASA.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Login administración</title>
@@ -21,7 +21,7 @@
 <header class="header   ">
     <nav class="navbar fixed-top barra navbar-expand-md ">
         <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
+          <a class="navbar-brand titulo-prophoriz" href="/index.html">PropHoriz</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,7 +31,7 @@
                 <a class="nav-link iconos-header-letra " aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra " href="menu admistracion/anuncios.html"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra " href=""> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link iconos-header-letra " href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
@@ -65,7 +65,7 @@
     </form>
     <!- cuando sea funcional poner esta aparte dentro del formulario ->
   
-    <a href="menu admistracion/menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
+    <a href="/Modulo administracion/menu admistracion/menu administracion/menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
     <div class="register-link">
       <p>No tienes una cuenta?
       <a href="">Registrarse</a></p>
