--- a/Modulo administracion/login administracion.html
+++ b/Modulo administracion/login administracion.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/IMG/ICONO CASA.ico">
+    <link rel="icon" href="../IMG/ICONO CASA.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Login administración</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="modulo administracion.css">
+    <link rel="stylesheet" href="login administracion.css">
 
 </head>
 <body>
@@ -19,22 +19,25 @@
     <!- barra de navegacion del header ->
 
 <header class="header   ">
-    <nav class="navbar fixed-top barra navbar-expand-md ">
+  <nav class="navbar fixed-top barra navbar-expand-md ">
         <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz" href="/index.html">PropHoriz</a>
+          <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra " aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
+                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-lines-fill"></i>Administración</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra " href=""> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="anuncios.html"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link iconos-header-letra " href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link iconos-header-letra" href="login administracion.html"> <i class="iconos-header bi bi-door-open-fill"></i> Cerrar sesión</a>
               </li>
             </ul>
           </div>
@@ -65,7 +68,7 @@
     </form>
     <!- cuando sea funcional poner esta aparte dentro del formulario ->
   
-    <a href="/Modulo administracion/menu admistracion/menu administracion/menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
+    <a href="menu administracion.html"> <button type="submit" class="btn">Ingresar</button> </a>
     <div class="register-link">
       <p>No tienes una cuenta?
       <a href="">Registrarse</a></p>
