--- a/Modulo propietario/login propietario.html
+++ b/Modulo propietario/login propietario.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/IMG/ICONO CASA.ico">
+    <link rel="icon" href="../IMG/ICONO CASA.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Login conserje</title>
-    <link rel="stylesheet" href="modulo conserje.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="login propietario.css">
+    <title>Login propietario</title>
+
 
 </head>
 <body>
@@ -28,13 +29,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link active ul-barra" aria-current="page" href="login.html"> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
+                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link active ul-barra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active ul-barra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
               </li>
             </ul>
           </div>
@@ -47,26 +48,21 @@
 <main class="main">
   <div class="wrapper">
     <form action="">
-         <p class="titulo">CONSERJE</p>
+        <h1>PROPIETARIO</h1>
         <div class="input-box">
-            <input type="text" placeholder="Usuario" required>
+            <input type="text" placeholder="Cedula" required>
             <i class="bi bi-person-fill"></i>
         </div>
         <div class="input-box">
-            <input type="password" placeholder="Contraseña" required>
+            <input type="password" placeholder="N° de apartamento" required>
             <i class="bi bi-lock-fill"></i>
         </div>
-        <div class="remember-forgot">
-            <label for=""> <input type="checkbox"> Recordar datos</label>
-            <a href="">Olvidaste tu conrtraseña</a>
-        </div>
-        <button type="submit" class="btn">Login</button>
-        <div class="register-link">
-            <p>No tienes una cuenta?
-            <a href="">Registrarse</a></p>
-        </div>
+       
     </form>
-
+    <!- cuando sea funcional poner esta aparte dentro del formulario ->
+    
+    <a href="menu propietario.html"> <button type="submit" class="btn">Ingresar</button> </a>
+  
   </div>
 
 </main>
@@ -76,8 +72,8 @@
 <footer class="footer">
   <nav class="navbar navbar-expand-md fixed-bottom barra dropup"  >
     <div class="container-fluid mx-5 ">
-     <p> <b>COPYRIGHT <i class="bi bi-c-circle"></i></b>Todos los derechos reservados</p>
-    </div>
+      <p> <b>COPYRIGHT <i class="bi bi-c-circle"></i></b>Todos los derechos reservados</p>
+      </div>
   </nav>
 </footer>
 
