--- a/Modulo propietario/ver informacion completa.html
+++ b/Modulo propietario/ver informacion completa.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="IMG/ICONO CASA.ico">
+    <link rel="icon" href="../IMG/ICONO CASA.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Informacion</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="inf completa.css">
+    <link rel="stylesheet" href="ver informacion completa.css">
 
 </head>
 <body>
@@ -19,27 +19,30 @@
     <!- barra de navegacion del header ->
 
 <header class="header   ">
-    <nav class="navbar fixed-top barra navbar-expand-md ">
-        <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz" href="menu administracion.html">PropHoriz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto ">
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>  Usuario</a> 
-              </li>
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="/Modulo propietario/Menu propietario/ver anuncios.html"> <i class="iconos-header bi bi-bell"></i>Notificación</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar fixed-top barra navbar-expand-md ">
+    <div class="container-fluid mx-5">
+      <a class="navbar-brand titulo-prophoriz" href="menu propietario.html">PropHoriz</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-lines-fill user"></i>1000234567</a> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="ver anuncios.html"> <i class="iconos-header bi bi-megaphone"></i>Anuncios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="login propietario.html"> <i class="iconos-header bi bi-door-open-fill"></i>Cerrar sesión</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
 
 <! Formulario del propietario ->
@@ -210,18 +213,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link menu-color-letra" aria-current="page" href="../Menu propietario.html">INICIO</a>
+            <a class="nav-link menu-color-letra" aria-current="page" href="menu propietario.html">INICIO</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link menu-color-letra dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
               INFORMACIÓN
             </a>
             <ul class="dropdown-menu text-center">
-              <li><a class="dropdown-item" href="../Ver formularios/informacion completa.html">Ver información del APTO</a></li>
+              <li><a class="dropdown-item" href="ver informacion completa.html">Ver información del APTO</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="../Ver formularios/ver documentacion.html">Ver documentación</a></li>
+              <li><a class="dropdown-item" href="ver documentacion.html">Ver documentación</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="../Ver formularios/Ver historial de pagos.html">Historial de pagos</a></li>
+              <li><a class="dropdown-item" href="Ver historial de pagos.html">Historial de pagos</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
