se modifican dos modulos

--- a/Modulo administracion/login administracion.html
+++ b/Modulo administracion/login administracion.html
@@ -20,29 +20,26 @@
 
 <header class="header   ">
   <nav class="navbar fixed-top barra navbar-expand-md ">
-        <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto ">
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-lines-fill"></i>Administración</a> 
-              </li>
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="anuncios.html"> <i class="iconos-header bi bi-bell"></i>Anuncios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link iconos-header-letra" href="login administracion.html"> <i class="iconos-header bi bi-door-open-fill"></i> Cerrar sesión</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <div class="container-fluid mx-5">
+      <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
 
 <! Formulario del propietario ->
