--- a/Modulo conserje/login conserje.html
+++ b/Modulo conserje/login conserje.html
@@ -19,27 +19,27 @@
     <!- barra de navegacion del header ->
 
 <header class="header   ">
-    <nav class="navbar fixed-top barra navbar-expand-md ">
-        <div class="container-fluid mx-5">
-          <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto ">
-              <li class="nav-item">
-                <a class="nav-link active ul-barra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active ul-barra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active ul-barra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar fixed-top barra navbar-expand-md ">
+    <div class="container-fluid mx-5">
+      <a class="navbar-brand titulo-prophoriz" href="../index.html">PropHoriz</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" aria-current="page" href=""> <i class="iconos-header bi bi-person-circle user"></i>Usuario</a> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-bell"></i>  Notificación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link iconos-header-letra" href="#"> <i class="iconos-header bi bi-question-circle"></i> Ayuda</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
 
 <! Formulario del propietario ->
@@ -60,7 +60,7 @@
             <label for=""> <input type="checkbox"> Recordar datos</label>
             <a href="">Olvidaste tu conrtraseña</a>
         </div>
-        <button type="submit" class="btn">Login</button>
+        <button type="submit" class="btn">Ingresar</button>
         <div class="register-link">
             <p>No tienes una cuenta?
             <a href="">Registrarse</a></p>
