--- a/Modulo administracion/informacion completa.html
+++ b/Modulo administracion/informacion completa.html
@@ -240,11 +240,11 @@
             <ul class="dropdown-menu text-center">
               <li><a class="dropdown-item" href="">Generar mes actual</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Listado de propietarios en mora</a></li>
+              <li><a class="dropdown-item" href="propietarios en mora.html">Listado de propietarios en mora</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Listado de propietarios al dia</a></li>
+              <li><a class="dropdown-item" href="propietarios al dia.html">Listado de propietarios al dia</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Listado general</a></li>
+              <li><a class="dropdown-item" href="generar pagos.html">Listado general</a></li>
             </ul>
           </li>
        
